Add continue config yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ workflows:
     jobs:
       - path-filtering/filter:
           base-revision: main
-          config-path: .circleci/config.yml
+          config-path: .circleci/continue-config.yml
           mapping: |
             app/public/.* public true
             app/sample/.* sample true
