If same job is run what happens

--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -51,7 +51,7 @@ workflows:
   test-1:
     when: << pipeline.parameters.public >>
     jobs:
-      - public
+      - sample
   test-2:
     when: << pipeline.parameters.sample >>
     jobs:
