--- a/.circleci/continue-config.yml
+++ b/.circleci/continue-config.yml
@@ -56,6 +56,7 @@ workflows:
     when: << pipeline.parameters.sample >>
     jobs:
       - sample
+        name: aaa
   all-tests:
     when:
       and: [<< pipeline.parameters.public >>, << pipeline.parameters.sample >>]
